# pat-basic-level-practice

./: .gitignore  CMakeLists.txt  README.md  main.c  pat.c  pat.h  pat1001.c  pat1002.c  pat1003.c  pat1004.c  pat1005.c  pat1006.c  pat1007.c  pat1008.c  pat1009.c  pat1010.c  pat1011.c  pat1012.c  pat1013.c  pat1014.c  pat1015.c  pat1016.c  pat1017.c  pat1018.c  test.c
Notes/: pat1001-卡拉兹(Callatz)猜想.md  pat1002-写出这个数.md  pat1003-我要通过.md  pat1004-成绩排名.md  pat1005-继续3n+1猜想.md  pat1006-换个格式输出整数.md  pat1007-素数对猜想.md  pat1008-数组循环左移.md  pat1009-说反话.md  pat1010-一元多项式求导.md  pat1011-A+B和C.md  pat1013-数素数.md  pat1014-福尔摩斯的约会.md  pat1015-德才论.md
apps/pat1001/: CMakeLists.txt  pat1001.cpp
apps/pat1002/: CMakeLists.txt  pat1002.cpp
apps/pat1003/: CMakeLists.txt  pat1003.cpp
apps/pat1004/: CMakeLists.txt  pat1004.cpp
