cmake_minimum_required(VERSION 3.16)
project(pat_basic_level_practice C)

set(CMAKE_C_STANDARD 99)

add_executable(pat_basic_level_practice main.c)
add_executable(pat1001 pat1001.c)
add_executable(pat1007 pat1007.c)
add_executable(pat1013 pat1013.c)
add_executable(pat1014 pat1014.c)
add_executable(pat1015 pat1015.c)